syntax = "proto3";

package tanagra.regressiontest;

option java_package = "bio.terra.tanagra.proto.regressiontest";
option java_outer_classname = "RTDataFeatureSet";

import "regressiontest/criteria.proto";

message DataFeatureSet {
  string underlay = 1;
  string display_name = 2;
  repeated Criteria criteria = 3;
  repeated EntityOutput entity_outputs = 4;
}

message EntityOutput {
  string entity = 1;
  repeated string included_attributes = 2;
}
